<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/studentbackground"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/avgaim"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="160dp"
        android:background="#545A61"
        android:ems="10"
        android:hint="@string/avgaim"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradefive"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/gradefive"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="#545A61"
        android:ems="10"
        android:hint="@string/grade_five"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradefour" />

    <EditText
        android:id="@+id/gradefour"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="#545A61"
        android:ems="10"
        android:hint="@string/grade_four"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradethree" />

    <EditText
        android:id="@+id/gradethree"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="#545A61"
        android:ems="10"
        android:hint="@string/grade_three"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradetwo" />

    <EditText
        android:id="@+id/gradetwo"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="#545A61"
        android:ems="10"
        android:hint="@string/grade_two"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradeone" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <EditText
        android:id="@+id/gradeone"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#545A61"
        android:ems="10"
        android:hint="@string/grade_one"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/gradetwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname" />

    <Button
        android:id="@+id/results"
        android:layout_width="89dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="300dp"
        android:background="#0B380D"
        android:text="@string/resultsbutt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/avgaim"
        app:layout_constraintTop_toBottomOf="@+id/gradefive"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/diagnosis"
        android:layout_width="307dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgaim"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>